--- a/FluffybuttBrewery/package.json
+++ b/FluffybuttBrewery/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "firebase": "^3.7.1",
     "react": "15.4.2",
-    "react-native": "0.42.0"
+    "react-native": "0.42.0",
+    "react-native-mail": "^3.0.1"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
