--- a/FluffybuttBrewery/android/gradle.properties
+++ b/FluffybuttBrewery/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=fluffybutt-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=fluffybutt-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=fluffybutt
+MYAPP_RELEASE_KEY_PASSWORD=fluffybutt
