--- a/FluffybuttBrewery/package.json
+++ b/FluffybuttBrewery/package.json
@@ -10,6 +10,7 @@
     "firebase": "^3.7.1",
     "react": "15.4.2",
     "react-native": "0.42.0",
+    "react-native-easy-toast": "^1.0.5",
     "react-native-mail": "^3.0.1"
   },
   "devDependencies": {
