--- a/FluffybuttBrewery/android/app/build.gradle
+++ b/FluffybuttBrewery/android/app/build.gradle
@@ -90,7 +90,7 @@ android {
         applicationId "com.fluffybuttbrewery"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 3
+        versionCode 4
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
@@ -137,6 +137,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-device-info')
+    compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
