--- a/FluffybuttBrewery/android/settings.gradle
+++ b/FluffybuttBrewery/android/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'FluffybuttBrewery'
+include ':react-native-device-info'
+project(':react-native-device-info').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-device-info/android')
+include ':react-native-vector-icons'
+project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 
 include ':RNMail', ':app'
 project(':RNMail').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-mail/android')
