--- a/FluffybuttBrewery/package.json
+++ b/FluffybuttBrewery/package.json
@@ -11,8 +11,11 @@
     "react": "15.4.2",
     "react-native": "0.42.0",
     "react-native-communications": "^2.2.1",
+    "react-native-device-info": "^0.10.2",
     "react-native-easy-toast": "^1.0.5",
-    "react-native-mail": "^3.0.1"
+    "react-native-elements": "^0.14.0",
+    "react-native-mail": "^3.0.1",
+    "react-native-vector-icons": "^4.2.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
