--- a/FluffybuttBrewery/package.json
+++ b/FluffybuttBrewery/package.json
@@ -15,7 +15,8 @@
     "react-native-easy-toast": "^1.0.5",
     "react-native-elements": "^0.14.0",
     "react-native-mail": "^3.0.1",
-    "react-native-vector-icons": "^4.2.0"
+    "react-native-vector-icons": "^4.2.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
